# argus-tagger

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  dev.yml  release.yml
openspec/: config.yaml
openspec/changes/design-argus/: design.md  proposal.md  tasks.md
openspec/changes/design-argus/specs/hermes-consumer/: spec.md
openspec/changes/design-argus/specs/suggestion-contract/: spec.md
openspec/changes/design-argus/specs/tagging-service/: spec.md
spikes/: ram_plus_latency.py
src/argus/: __init__.py  apollo.py  config.py  consumer.py  contract.py  errors.py  health.py  hermes.py  main.py  merge.py  normalize.py  pipeline.py
src/argus/models/: __init__.py  base.py  preprocess.py  ram_plus.py  wd_tagger.py
tests/: test_consumer.py  test_contract.py  test_hermes.py  test_merge.py  test_normalize.py  test_pipeline.py  test_preprocess.py
